Fix spacing

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 html, body {
     width: 100%;
-    height: auto;
+    height: 100vh;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -12,11 +12,7 @@ html, body {
 
 #container {
     display: flex;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    height: 100%;
 }
 
 #left-panel {
@@ -61,9 +57,13 @@ span {
     flex:6;
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     padding-left: 50px;
     /* border: 1px solid white; */
+}
+
+h1 {
+    margin-bottom: 0px
 }
 
 #bottom-container {
